# gil-cowork-plugins

./: .gitignore  CHANGELOG.md  LICENSE  PUSH-INSTRUCTIONS.md  README.md
.claude-plugin/: marketplace.json
gil-bi/: README.md
gil-book/: README.md
gil-business/: .mcp.json  CONNECTORS.md  README.md
gil-career/: README.md
gil-commerce/: CONNECTORS.md  README.md
gil-content/: .mcp.json  CONNECTORS.md  README.md
gil-data/: README.md
gil-design/: README.md
gil-hr/: README.md
mcp-servers/gil-ads-audit/: CONNECTORS.md  NOTICE.md  README.md  manifest.json  pyproject.toml
mcp-servers/gil-ads-audit/references/: uz-compliance-extension.md  uz-market-benchmarks.md
mcp-servers/gil-ads-audit/src/gkuz_ads_audit/: __init__.py  __main__.py  server.py
mcp-servers/gil-ads-audit/src/gkuz_ads_audit/benchmarks/: __init__.py  korean.py
mcp-servers/gil-ads-audit/src/gkuz_ads_audit/compliance/: __init__.py  korean.py
mcp-servers/gil-ads-audit/src/gkuz_ads_audit/parsers/: __init__.py  xlsx.py
mcp-servers/gil-ads-audit/src/gkuz_ads_audit/scoring/: __init__.py  weighted.py
mcp-servers/gil-ads-audit/src/gkuz_ads_audit/tools/: __init__.py  apply_korean_benchmarks.py  apply_korean_compliance.py  audit_account_structure.py  audit_andromeda_emq.py  audit_audience_targeting.py  audit_creative_diversity.py  audit_meta_account.py  audit_pixel_capi.py  calculate_health_score.py  generate_quick_wins.py
mcp-servers/gil-ads-audit/tests/: test_parser_xlsx.py  test_scoring_weighted.py  test_tools_round4.py
mcp-servers/gil-ads-audit/tests/fixtures/: sample_meta_report.xlsx.md
(+713 files in other folders)
